# geodesy-wasm

./: .eslintrc.js  .gitignore  .prettierrc.cjs  CHANGELOG.md  Cargo.toml  README.md  bun.lockb  geodesy.ts  package.json  test.js  tsconfig.json
.github/workflows/: checks.yml  npm-publish-github-packages.yml  rust.yml
examples/js/: 00-basic-transformations.ts  00-basics.ts  01-gridshift.ts  benchmark.ts  run.ts  utils.ts
js/: coordinates.ts  geodesy.test.ts  geodesy.ts
js/fixtures/: README.md
scripts/: build.sh
src/: error.rs  lib.rs  utils.rs
src/geodesy/: context.rs  coordinate.rs  grid.rs  grids.rs  mod.rs  ntv2_grid.rs  wasmcontext.rs
src/geodesy/grid/: mod.rs  ntv2_grid.rs
src/geodesy/operators/: longlat.rs  mod.rs  noop.rs  senmerc.rs  somerc.rs  unitconvert.rs  units.rs
tests/: coordinates.rs
