[package]
name = "geodesy-wasm"
version = "0.5.0"
keywords = ["geospatial", "geodesy", "cartography", "geography"]
categories = ["science"]
authors = ["Sean Rennie <sean.rennie@sensat.co.uk>"]
description = "A WASM wrapper around the Rust Geodesy crate"
repository = "https://github.com/Rennzie/geodesy-wasm"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = "0.2.86"

geodesy_rs = { package = "geodesy", git = "https://github.com/Rennzie/geodesy.git", rev = "499f17952fa21a49a0e6a0a3d4cd35ab17c1bd1f", version = "0.11.1", features = [
  "js",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.64"
thiserror = "1.0.44"
console_log = { version = "1.0.0", features = ["color"], optional = true }
log = "0.4.19"
float_eq = "1.0.1"
once_cell = "1.18.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# For tiny binaries
lto = true
