[package]
name = "geodesy-wasm"
version = "0.7.0"
rust-version = "1.70"
keywords = ["geospatial", "geodesy", "cartography", "geography"]
categories = ["science"]
authors = ["Sean Rennie <sean.rennie@sensat.co.uk>"]
description = "A WASM wrapper around the Rust Geodesy crate"
repository = "https://github.com/Rennzie/geodesy-wasm"
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook", "console_log"]

[dependencies]
wasm-bindgen = "0.2.92"

geodesy_rs = { package = "geodesy", git = "https://github.com/Rennzie/geodesy.git", rev = "02b3c87bbbdd4cd292ec38de6ac5dbb687068792", version = "0.13.0", default-features = false, features = [
  "js",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.69"
thiserror = "2.0.10"
console_log = { version = "1.0.0", features = ["color"], optional = true }
log = "0.4.21"
float_eq = "1.0.1"
wasm-bindgen-futures = "0.4.42"
reqwest = "0.12.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
# For tiny binaries
lto = true
